Adding sprite sheet support
