# java11/src/main/java/com/nolanprice/controllers/SpriteApiController.java
@@ -3,12 +3,16 @@ package com.nolanprice.controllers;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.FileSystemResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.context.request.NativeWebRequest;
 
+import java.io.File;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -38,13 +42,23 @@ public class SpriteApiController implements SpriteApi {
     }
 
     @Override
-    public ResponseEntity<byte[]> getSpriteSheet(CharacterInfo characterInfo) {
+    public ResponseEntity<Resource> getSpriteSheet(CharacterInfo characterInfo) {
         try {
-            return ResponseEntity.ok(spriteBuilder.buildSpriteSheet(characterInfo.getEquipment()
-                                                                                 .stream()
-                                                                                 .map(Equipment::getName)
-                                                                                 .collect(Collectors.toList()),
-                                                                    characterInfo.getRace()));
+            return ResponseEntity.ok(new FileSystemResource(spriteBuilder.buildSpriteSheet(characterInfo.getEquipment()
+                                                                                                        .stream()
+                                                                                                        .map(Equipment::getName)
+                                                                                                        .collect(Collectors.toList()),
+                                                                                           characterInfo.getRace())));
+        } catch (Exception e) {
+            LOGGER.error("Failed to generate sprite sheet", e);
+            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    @Override
+    public ResponseEntity<Resource> getSpriteSheetByName(String name) {
+        try {
+            return ResponseEntity.ok(new FileSystemResource(spriteBuilder.getSpriteSheetFile(name)));
         } catch (Exception e) {
             LOGGER.error("Failed to generate sprite sheet", e);
             return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
